Update OASIS Random Forest model

--- a/Oasis_Models/OASIS Random Forest.ipynb
+++ b/Oasis_Models/OASIS Random Forest.ipynb
@@ -166,15 +166,15 @@
     "Here are the steps to building the Random Forest classifier\n",
     "\n",
     "\n",
-    "1. Build a Random Forest Classifier with 5-Fold Cross-Validation: Set up a Random Forest classifier inside a cross-validation loop using GridSearchCV to perform hyperparameter tuning. This ensures that we test different combinations of parameters to find the best model.\n",
+    "1. **Build a Random Forest Classifier with 5-Fold Cross-Validation**: Set up a Random Forest classifier inside a cross-validation loop using GridSearchCV to perform hyperparameter tuning. This ensures that we test different combinations of parameters to find the best model.\n",
     "\n",
-    "2. Hyperparameter Tuning: We will tune parameters such as n_estimators (the number of trees in the forest) and max_depth (the maximum levels of each tree) among others which include min_samples_split and min_samples_leaf.\n",
+    "2. **Hyperparameter Tuning**: We will tune parameters such as n_estimators (the number of trees in the forest) and max_depth (the maximum levels of each tree) among others which include min_samples_split and min_samples_leaf.\n",
     "\n",
-    "3. Model Evaluation: Using metrics such as accuracy, confusion matrix, and classification report, we'll assess how well our model is performing.\n",
+    "3. **Model Evaluation**: Using metrics such as accuracy, confusion matrix, and classification report, we'll assess how well our model is performing.\n",
     "\n",
-    "4. Integrate SHAP Values to Interpret the Model: SHAP values will provide insights into how each feature in the dataset is impacting the model's predictions, which is crucial for understanding the decision-making of our model.\n",
+    "4. **Integrate SHAP Values to Interpret the Model**: SHAP values will provide insights into how each feature in the dataset is impacting the model's predictions, which is crucial for understanding the decision-making of our model.\n",
     "\n",
-    "5. Visualizing the random forest and the confusion matrix: This will provide visual insights into the model's structure and performance."
+    "5. **Visualizing the random forest and the confusion matrix**: This will provide visual insights into the model's structure and performance."
    ]
   },
   {
