Updating text on notebook

--- a/Oasis_Models/OASIS XGBoost.ipynb
+++ b/Oasis_Models/OASIS XGBoost.ipynb
@@ -165,11 +165,11 @@
    "source": [
     "Here are the steps to building the XGBoost classifier\n",
     "\n",
-    "1. Data Preparation: We then select relevant features and split the dataset into training and testing sets.\n",
+    "1. **Data Preparation**: We then select relevant features and split the dataset into training and testing sets.\n",
     "\n",
-    "2. Model Building with Cross-Validation: GridSearchCV is used with XGBoost to find the best hyperparameters over a specified range, using 5 k-fold cross-validation to ensure the model's generalizability.\n",
+    "2. **Model Building with Cross-Validation**: GridSearchCV is used with XGBoost to find the best hyperparameters over a specified range, using 5 k-fold cross-validation to ensure the model's generalizability.\n",
     "\n",
-    "3. Hyperparameter Tuning: We tune parameters like max_depth, learning_rate, n_estimators, and others to optimize model performance.\n",
+    "3. **Hyperparameter Tuning**: We tune parameters like max_depth, learning_rate, n_estimators, and others to optimize model performance.\n",
     "\n",
     "    - max_depth: Maximum depth of a tree. Increasing this value will make the model more complex and more likely to overfit.\n",
     "\n",
@@ -183,11 +183,11 @@
     "    - n_estimators: Number of gradient boosted trees. Equivalent to the number of boosting rounds.\n",
     "    \n",
     "\n",
-    "4. Model Evaluation: We calculate accuracy, and generate a confusion matrix and classification report to assess performance.\n",
+    "4. **Model Evaluation**: We calculate accuracy, and generate a confusion matrix and classification report to assess performance.\n",
     "\n",
-    "5. SHAP Values for Interpretation: We use SHAP to understand the impact of each feature on the model's predictions.\n",
+    "5. **SHAP Values for Interpretation**: We use SHAP to understand the impact of each feature on the model's predictions.\n",
     "\n",
-    "6. Visualization: We plot the ROC curve and the SHAP values to visually assess model performance and feature impact."
+    "6. **Visualization**: We plot the ROC curve and the SHAP values to visually assess model performance and feature impact."
    ]
   },
   {
